tests/ui/parser/dotdotdot-expr.rs
fn main() {
    let _redemptive = 1...21;
    //~^ ERROR unexpected token
}
